src/test/ui/parser/macro-mismatched-delim-paren-brace.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/macro-mismatched-delim-paren-brace.rs:4:5
   |
LL |     }
   |     ^ unexpected closing delimiter

error: unexpected closing delimiter: `}`
  --> $DIR/macro-mismatched-delim-paren-brace.rs:5:1
   |
LL | }
   | ^ unexpected closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/macro-mismatched-delim-paren-brace.rs:5:47
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     foo! (
   |          - unclosed delimiter
...
LL | }
   |                                               ^

error: this file contains an unclosed delimiter
  --> $DIR/macro-mismatched-delim-paren-brace.rs:5:47
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     foo! (
   |          - unclosed delimiter
...
LL | }
   |                                               ^

error: cannot find macro `foo` in this scope
  --> $DIR/macro-mismatched-delim-paren-brace.rs:2:5
   |
LL |     foo! (
   |     ^^^

error: aborting due to 5 previous errors

